# hosting_and_deploy

./: Store & Shop ООП.py  pyproject.toml  requirements.txt
Game/: Dockerfile  app.py  arena.py  classes.py  equipment.py  skills.py  unit.py
Game/templates/: fight.html
docker/: docker-compose.yaml  docker_compose_easy.txt
Типизация/: app.py
